--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     
 	   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
       <div class="container">
-        <a class="navbar-brand" href="https://insomnia-ins.github.io/afterpay">RED_YARM.RU</a>
+        <a class="navbar-brand" href="https://insomnia-ins.github.io/afterpay/">RED_YARM.RU</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="oi oi-menu"></span>Меню
         </button>
@@ -55,7 +55,7 @@
   
     <ul class="navbar-nav mr-auto" style="margin-left: 200px;">
       <li class="nav-item ">
-        <a class="nav-link" href="https://insomnia-ins.github.io/main-after-reg/#" style="color: #F05133; ">Домашняя <span class="sr-only" style="color: #F05133; ">(current)</span></a>
+        <a class="nav-link" href="https://insomnia-ins.github.io/afterpay/" style="color: #F05133; ">Домашняя <span class="sr-only" style="color: #F05133; ">(current)</span></a>
       
       </li>
       <li class="nav-item ">
