--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
       <h4>Cтатус</h4>
         <p style="color: white; ">В поиске постоянной работы</p>
       <button type="button" class="btn  zadd ml-20 mt-2" style="display: block;  background-color: #F05133; color: white; margin-left: auto;margin-right: auto;">Настройки</button>
-      <button type="button" class="btn  zadd ml-20 mt-2" style="display: block;  background-color: #F05133; color: white; margin-left: auto;margin-right: auto;">Смотреть как аккаунт работодателя</button>
       </div>
       <div style=" height: 300px; width: 480px; margin-left: 40px; margin-top: 50px;">
         <div style="display: flex;">
@@ -146,7 +145,7 @@
 
     <div style="background-color; height: 230px; width: 750px; display: flex; margin-left: auto;margin-right: auto; margin-top: 25px;">
       <div  class="shadow p-3 mb-5 bg-white rounded" style="height: 250px; width: 300px;  display: flex; margin-left: 15px;" >
-        <img src="Interface.png" alt="..." class="rounded-circle" style="height: 50px; ">
+        <img src="interface.png" alt="..." class="rounded-circle" style="height: 50px; ">
         <div style="margin-left: 15px; color: black;">
         <p>Michael Mono</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -156,7 +155,7 @@
       </div>
 
       <div  class="shadow p-3 mb-5 bg-white rounded" style="height: 250px; width: 300px;  display: flex; margin-left: 100px; " >
-        <img src="Interface.png" alt="..." class="rounded-circle" style="height: 50px; ">
+        <img src="interface.png" alt="..." class="rounded-circle" style="height: 50px; ">
         <div style="margin-left: 15px; color: black;">
         <p>Michael Mono</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
